Item title alignment issue at dev

--- a/src/app/views/nftmarket/nftmarket.component.scss
+++ b/src/app/views/nftmarket/nftmarket.component.scss
@@ -142,7 +142,7 @@
             color: rgb(4, 17, 29);
             background-color: #e9e8e8;
             display: flex;
-            align-items: end;
+            align-items: flex-end;
             justify-content: space-between;
 
             span:last-child {
